k3s/manifests/kube-vip-cp.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: kube-vip-ds
    app.kubernetes.io/version: v0.8.2
  name: kube-vip-ds
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-vip-ds
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: kube-vip-ds
        app.kubernetes.io/version: v0.8.2
    spec:
      containers:
      - args:
        - manager
        image: ghcr.io/kube-vip/kube-vip:v0.8.2
        imagePullPolicy: IfNotPresent
        name: kube-vip
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      hostNetwork: true
      serviceAccountName: kube-vip
  updateStrategy: {}
